<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCommentDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="5dp"
            android:backgroundTint="@color/basil_green"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvComments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:ems="10"
                android:hint="@string/comment"
                android:inputType="textPersonName"
                android:maxLength="100"
                app:layout_constraintEnd_toStartOf="@+id/btnPostComment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvComments"
                android:autofillHints="@string/comment" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPostComment"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_gravity="end"
                android:text="@string/post"
                app:layout_constraintBaseline_toBaselineOf="@id/etComment"
                app:layout_constraintEnd_toEndOf="parent"
                app:strokeColor="@color/basil_green"
                app:strokeWidth="2dp" />

        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>