<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTitleBlog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweather_bold_italic"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title of the blog" />

        <TextView
            android:id="@+id/tvAuthorNameBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/merriweather_light"
            android:textColor="@color/basil_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleBlog"
            tools:text="Author name" />

        <TextView
            android:id="@+id/tvCreatedAtBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvAuthorNameBlog"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="22/12/2020" />

        <ImageView
            android:id="@+id/ivImageBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAuthorNameBlog"
            tools:src="@drawable/ic_baseline_image_24"
            android:contentDescription="@string/post_image" />

        <TextView
            android:id="@+id/tvContentBlog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/merriweather"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivImageBlog"
            tools:text="This is the dummy content of the blog.This is the dummy content of the blog.This is the dummy content of the blog.This is the dummy content of the blog.This is the dummy content of the blog.This is the dummy content of the blog.This is the dummy content of the blog.This is the dummy content of the blog." />

        <CheckBox
            android:id="@+id/cbLikedBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:button="@drawable/heart_like_button"
            android:text="@string/_0_liked"
            app:layout_constraintStart_toStartOf="@+id/tvTitleBlog"
            app:layout_constraintTop_toBottomOf="@+id/tvContentBlog"
            app:useMaterialThemeColors="false"/>

        <TextView
            android:id="@+id/tvSaveBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_saved"
            app:layout_constraintBaseline_toBaselineOf="@id/cbLikedBlog"
            app:layout_constraintStart_toEndOf="@+id/tvComment" />

        <ProgressBar
            android:id="@+id/pbBlog"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDeleteBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/cbLikedBlog"
            tools:layout_editor_absoluteX="317dp"
            tools:layout_editor_absoluteY="360dp"
            app:drawableStartCompat="@drawable/ic_delete" />

        <TextView
            android:id="@+id/tvComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:drawablePadding="2dp"
            app:layout_constraintStart_toEndOf="@id/cbLikedBlog"
            app:layout_constraintBaseline_toBaselineOf="@id/cbLikedBlog"
            tools:layout_editor_absoluteX="113dp"
            tools:layout_editor_absoluteY="369dp"
            app:drawableStartCompat="@drawable/ic_comment" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>